# Rospital

./: README.md
src/: README.md
src/ rospital_description/urdf/: rospital_gazebo.xacro
src/rospital_bringup/config/: rospital_controllers.yaml  rospital_params.yaml
src/rospital_bringup/launch/: controller.launch.py  navigation.launch.py
src/rospital_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/rospital_power/: CMakeLists.txt  package.xml
src/rospital_power/power_monitor/: battery_status.py  motor_status.py
