<?xml version="1.0"?>
<package format="3">
  <name>power_monitor</name>
  <version>0.1.0</version>
  <description>Power monitoring from Arduino (INA219) and ODrive via CAN</description>
  <maintainer email="rospital@todo.todo">rospital</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
